--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"updateUrl":"http://download.fshqtx.com/vpnagentpc/VPN_Agency.application","tcpHost":"111.231.238.24","tcpPort":6789}
+{"updateUrl":"http://download.fshqtx.com/vpnagentpc/VPN_Agency.application","tcpHost":"111.231.238.24","tcpPort":6789,"msg":"222"}
