--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"updateUrl":"http://download.fshqtx.com/vpnagentpc/VPN_Agency.application","tcpHost":"192.168.1.66","tcpPort":6789,"msg":"27263"}
+{"updateUrl":"http://download.fshqtx.com/vpnagentpc/VPN_Agency.application","tcpHost":"192.168.1.66","tcpPort":6789,"msg":"27263","proxyHost":"10.168.1.141","proxyPort":30001}
